--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "expo": "^47.0.14",
     "expo-status-bar": "~1.4.4",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.2.0",
     "react-native": "^0.70.5",
