--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
     },
     "rules": {
         "react/react-in-jsx-scope": "off",
-        "no-use-before-define":0
+        "no-use-before-define":0,
+        "react/prop-types": ["error", { "ignore": ["navigation"] }]
     }
 }
