--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^5.14.9",
     "expo": "^47.0.14",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^8.10.0",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.2.0",
